--- a/languages/go/template/part2_test.go.tmpl
+++ b/languages/go/template/part2_test.go.tmpl
@@ -6,7 +6,7 @@ import (
 
 func TestPart2(t *testing.T) {
 	expected := 0 // TODO: Set expected result
-	result, err := solve("inputs/test2.txt")
+	result, err := solve("inputs/test.txt")
 	if err != nil {
 		t.Fatalf("Error solving: %v", err)
 	}
